syntax = "proto3";

package services.meta.proto;

option go_package = "github.com/JanCalebManzano/tag-microservices/services/meta/proto";

import "google/protobuf/any.proto";
import "google/api/annotations.proto";

service MetaService {
  rpc GetAllSystems(GetAllSystemsRequest) returns (GetAllSystemsResponse){
    option (google.api.http) = {
      get: "/meta/systems"
    };
  }
}

message ResponseError {
  string status_code = 1;
  string location = 2;
  string param = 3;
  google.protobuf.Any input_value = 4;
  string error_message = 5;
}

message GetAllSystemsRequest {}

message GetAllSystemsResponse {
  string status = 1;
  repeated System data = 2;
  repeated ResponseError errors = 3;
}

message Response {}

message System {
  int64 system_no = 1;
  string system_name = 2;
  string system_short_name = 3;
  string set_user = 4;
  string set_timestamp = 5;
}
